--- a/ギュウMAXガチャ/stamp.html
+++ b/ギュウMAXガチャ/stamp.html
@@ -9,203 +9,190 @@
       box-sizing: border-box;
     }
 
-body {
-  margin: 0;
-  padding: 0;
-  background: url("images/glass_logo.png") no-repeat center center fixed;
-  background-size: cover;
-  font-family: 'Segoe UI', sans-serif;
-  color: #cceeff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
-  position: relative;
-  overflow-x: hidden;
-}
+    body {
+      margin: 0;
+      padding: 0;
+      background: url("images/glass_logo.png") no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Segoe UI', sans-serif;
+      color: #cceeff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
+    }
 
-/* 脈打つ中心光 */
-body::before {
-  content: "";
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 400px;
-  height: 400px;
-  background: radial-gradient(circle, rgba(0,255,255,0.15) 0%, transparent 70%);
-  transform: translate(-50%, -50%);
-  animation: pulseLight 3s ease-in-out infinite;
-  pointer-events: none;
-  z-index: 1;
-}
+    /* 脈打つ中心光 */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 600px;
+      height: 600px;
+      background: radial-gradient(circle, rgba(0,255,255,0.25) 0%, transparent 70%);
+      transform: translate(-50%, -50%);
+      animation: pulseLight 2.5s ease-in-out infinite;
+      pointer-events: none;
+      z-index: 1;
+      filter: blur(2px);
+    }
 
-/* コンプリート時の光量増加 */
-body.complete::before {
-  animation-duration: 1.5s;
-  background: radial-gradient(circle, rgba(0,255,255,0.35) 0%, transparent 70%);
-  filter: drop-shadow(0 0 10px #00ffffaa);
-}
+    body.complete::before {
+      animation-duration: 1.2s;
+      background: radial-gradient(circle, rgba(0,255,255,0.5) 0%, transparent 70%);
+      filter: blur(4px) drop-shadow(0 0 15px #00ffff);
+    }
 
-@keyframes pulseLight {
-  0%, 100% { opacity: 0.7; transform: translate(-50%, -50%) scale(1); }
-  50% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
-}
+    @keyframes pulseLight {
+      0%, 100% { opacity: 0.7; transform: translate(-50%, -50%) scale(1); }
+      50% { opacity: 1; transform: translate(-50%, -50%) scale(1.2); }
+    }
 
-h1 {
-  margin-top: 40px;
-  font-size: 2rem;
-  text-shadow: 0 0 10px #00ffff;
-  position: relative;
-  z-index: 2;
-}
+    h1 {
+      margin-top: 40px;
+      font-size: 2rem;
+      text-shadow: 0 0 10px #00ffff;
+      position: relative;
+      z-index: 2;
+    }
 
-.progress-bar {
-  width: 90%;
-  max-width: 600px;
-  height: 20px;
-  background: rgba(255,255,255,0.1);
-  border-radius: 10px;
-  overflow: hidden;
-  margin: 20px auto;
-  box-shadow: 0 0 10px #00ffff66;
-  position: relative;
-  z-index: 2;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-}
+    .progress-bar {
+      width: 90%;
+      max-width: 600px;
+      height: 20px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 10px;
+      overflow: hidden;
+      margin: 20px auto;
+      box-shadow: 0 0 10px #00ffff66;
+      position: relative;
+      z-index: 2;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
 
-.progress-bar-fill {
-  height: 100%;
-  width: 0%;
-  background: linear-gradient(90deg, #00ffff, #0066ff);
-  transition: width 1s ease;
-  animation: glowbar 2s ease-in-out infinite alternate;
-  border-radius: 10px;
-  position: relative;
-  z-index: 2;
-}
+    .progress-bar-fill {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, #00ffff, #0066ff);
+      transition: width 1s ease;
+      animation: glowbar 2s ease-in-out infinite alternate;
+      border-radius: 10px;
+      position: relative;
+      z-index: 2;
+    }
 
-@keyframes glowbar {
-  from { filter: brightness(1); }
-  to { filter: brightness(1.5); }
-}
+    @keyframes glowbar {
+      from { filter: brightness(1); }
+      to { filter: brightness(1.5); }
+    }
 
-.poster-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 16px;
-  padding: 20px;
-  width: 95%;
-  max-width: 720px;
-  position: relative;
-  z-index: 2;
-}
+    .poster-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      gap: 16px;
+      padding: 20px;
+      width: 95%;
+      max-width: 720px;
+      position: relative;
+      z-index: 2;
+    }
 
-.poster {
-  position: relative;
-  width: 100%;
-  padding-bottom: 141.4%; /* A4比率 */
-  background-size: cover;
-  background-position: center;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 0 10px #00ffff33;
-  cursor: pointer;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  border: 1px solid rgba(0, 255, 255, 0.3);
-  transition: box-shadow 0.3s ease;
-}
-.poster:hover {
-  box-shadow: 0 0 20px #00ffffaa;
-}
+    .poster {
+      position: relative;
+      width: 100%;
+      padding-bottom: 141.4%;
+      background-size: cover;
+      background-position: center;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 0 10px #00ffff33;
+      cursor: pointer;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      border: 1px solid rgba(0, 255, 255, 0.3);
+      transition: box-shadow 0.3s ease;
+    }
 
-.stamp {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("images/stamp.png") center center no-repeat;
-  background-size: contain;
-  animation: pop 0.5s ease;
-  filter: drop-shadow(0 0 4px #00ffff);
-}
+    .poster:hover {
+      box-shadow: 0 0 20px #00ffffaa;
+    }
 
-@keyframes pop {
-  0% { transform: scale(0.2); opacity: 0; filter: brightness(2); }
-  80% { transform: scale(1.2); opacity: 1; filter: brightness(1.5); }
-  100% { transform: scale(1); filter: brightness(1); }
-}
+    .stamp {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url("images/stamp.png") center center no-repeat;
+      background-size: contain;
+      animation: pop 0.5s ease;
+      filter: drop-shadow(0 0 4px #00ffff);
+    }
 
-#completeBanner {
-  background: rgba(0, 255, 200, 0.2);
-  border: 2px solid #00ffff;
-  padding: 16px;
-  border-radius: 12px;
-  margin: 20px auto;
-  text-align: center;
-  font-size: 1.3rem;
-  box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff66;
-  text-shadow: 0 0 5px #00ffff;
-  max-width: 90%;
-  animation: glow 2s ease-in-out infinite alternate;
-  position: relative;
-  z-index: 2;
-}
+    @keyframes pop {
+      0% { transform: scale(0.2); opacity: 0; filter: brightness(2); }
+      80% { transform: scale(1.2); opacity: 1; filter: brightness(1.5); }
+      100% { transform: scale(1); filter: brightness(1); }
+    }
 
-@keyframes glow {
-  from { box-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff66; }
-  to { box-shadow: 0 0 30px #00ffff, 0 0 60px #00ffff99; }
-}
+    #completeBanner {
+      background: rgba(0, 255, 200, 0.2);
+      border: 2px solid #00ffff;
+      padding: 16px;
+      border-radius: 12px;
+      margin: 20px auto;
+      text-align: center;
+      font-size: 1.3rem;
+      box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff66;
+      text-shadow: 0 0 5px #00ffff;
+      max-width: 90%;
+      animation: glow 2s ease-in-out infinite alternate;
+      position: relative;
+      z-index: 2;
+    }
 
-/* モーダル用 */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 99;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  justify-content: center;
-  align-items: center;
-}
+    @keyframes glow {
+      from { box-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff66; }
+      to { box-shadow: 0 0 30px #00ffff, 0 0 60px #00ffff99; }
+    }
 
-.modal img {
-  max-height: 90vh;
-  max-width: 90vw;
-  box-shadow: 0 0 20px #00ffff;
-  border-radius: 10px;
-}
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 99;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      justify-content: center;
+      align-items: center;
+    }
 
-/* ガラス片アニメーションキャンバス */
-#glassParticles {
-  position: fixed;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  width: 100vw;
-  height: 100vh;
-  z-index: 0;
-}
+    .modal img {
+      max-height: 90vh;
+      max-width: 90vw;
+      box-shadow: 0 0 20px #00ffff;
+      border-radius: 10px;
+    }
 
-/* スマホ対応強化 */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 1.5rem;
-  }
-  .progress-bar {
-    height: 16px;
-  }
-  .poster-grid {
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    gap: 12px;
-  }
-}
-
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      .progress-bar {
+        height: 16px;
+      }
+      .poster-grid {
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        gap: 12px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -250,6 +237,7 @@ h1 {
     const allCollected = posterList.every(id => localStorage.getItem(`gyumax_${id}`));
     if (allCollected) {
       document.getElementById("completeBanner").style.display = "block";
+      document.body.classList.add("complete");
     }
   </script>
 </body>
