--- a/stamp.html
+++ b/stamp.html
@@ -24,6 +24,14 @@
       position: relative;
       overflow-x: hidden;
     }
+    
+    html, body {
+  overflow: hidden;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+    }
+
 
     /* 脈打つ中心光 */
     body::before {
