--- a/stamp.html
+++ b/stamp.html
@@ -13,11 +13,10 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      overflow-x: hidden;
     }
 
     body {
-      background: url("images/glass_logo.png") no-repeat center center fixed;
-      background-size: cover;
       font-family: 'Segoe UI', sans-serif;
       color: #cceeff;
       display: flex;
@@ -26,11 +25,24 @@
       justify-content: flex-start;
       min-height: 100vh;
       position: relative;
-      overflow-x: hidden;
     }
 
-    /* 脈打つ中心光 */
+    /* 背景画像（固定位置） */
     body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url("images/glass_logo.png") center center / cover no-repeat;
+      z-index: 0;
+      opacity: 1;
+      pointer-events: none;
+    }
+
+    /* 中心から脈打つ光 */
+    body::after {
       content: "";
       position: fixed;
       top: 50%;
@@ -45,7 +57,7 @@
       filter: blur(2px);
     }
 
-    body.complete::before {
+    body.complete::after {
       animation-duration: 1.2s;
       background: radial-gradient(circle, rgba(0,255,255,0.5) 0%, transparent 70%);
       filter: blur(4px) drop-shadow(0 0 15px #00ffff);
